--- a/Web/src/main/resources/locale_en_US.properties
+++ b/Web/src/main/resources/locale_en_US.properties
@@ -1,1 +1,36 @@
-index.title=Welcome to your blog
+about.header=About project
+about.text=Some text about project
+about.title=About
+adminarea.header=Create property
+adminarea.title=Create property
+edit.form.maintext=Main text
+edit.form.category=Category
+edit.form.header=Header
+edit.form.reset=Reset
+edit.form.save=Save
+edit.form.tags=Tags
+edit.title=Create property
+footer.language=Choose language
+error.title=Error
+error.header=Something went wrong
+error.text=Try to begin from <a href="index.jsp">main page</a> or return to <a href="javascript:history.back()">previous page</a> and try again.
+index.title=Main page
+index.record.edit=Edit
+index.record.delete=Delete
+index.record.category=Category
+index.record.author=Author
+index.newer=Newer
+index.older=Older
+login.form.email=Email
+login.title=Login page
+login.form.password=Password
+login.form.submit=Sign in
+login.form.register=Sign up
+register.title=Register page
+register.form.nickname=Nickname
+register.form.email=Email
+register.form.password=Password
+register.form.firstname=First name
+register.form.lastname=Last name
+register.form.submit=Sign up
+write.title=Create new entry
