--- a/Web/src/main/resources/locale_ru_RU.properties
+++ b/Web/src/main/resources/locale_ru_RU.properties
@@ -1,1 +1,36 @@
-index.title=Добро пожаловать в Ваш блог
+about.header=\u041E \u043F\u0440\u043E\u0435\u043A\u0442\u0435
+about.text=Some text about project
+about.title=About
+adminarea.header=Create property
+adminarea.title=Create property
+edit.form.maintext=Main text
+edit.form.category=Category
+edit.form.header=Header
+edit.form.reset=Reset
+edit.form.save=Save
+edit.form.tags=Tags
+edit.title=Create property
+footer.language=\u0412\u044B\u0431\u043E\u0440 \u044F\u0437\u044B\u043A\u0430
+error.title=Error
+error.header=Something went wrong
+error.text=Try to begin from <a href="index.jsp">main page</a> or return to <a href="javascript:history.back()">previous page</a> and try again.
+index.title=Main page
+index.record.edit=Edit
+index.record.delete=Delete
+index.record.category=Category
+index.record.author=Author
+index.newer=Newer
+index.older=Older
+login.form.email=Email
+login.title=Login page
+login.form.password=Password
+login.form.submit=Sign in
+login.form.register=Sign up
+register.title=Register page
+register.form.nickname=Nickname
+register.form.email=Email
+register.form.password=Password
+register.form.firstname=First name
+register.form.lastname=Last name
+register.form.submit=Sign up
+write.title=Create new entry
