Massive changes. It's work!

--- a/Web/src/main/resources/locale_en_US.properties
+++ b/Web/src/main/resources/locale_en_US.properties
@@ -1,15 +1,15 @@
 about.header=About project
 about.text=Some text about project
 about.title=About
-adminarea.header=Create property
-adminarea.title=Create property
+adminarea.header=Admin Panel
+adminarea.title=Admin panel
 edit.form.maintext=Main text
 edit.form.category=Category
 edit.form.header=Header
 edit.form.reset=Reset
 edit.form.save=Save
-edit.form.tags=Tags
-edit.title=Create property
+edit.form.tags=Tags (comma separated)
+edit.title=Edit record
 footer.language=Choose language
 error.title=Error
 error.header=Something went wrong
@@ -34,3 +34,31 @@ register.form.firstname=First name
 register.form.lastname=Last name
 register.form.submit=Sign up
 write.title=Create new entry
+navbar.toggle=Toggle navigation
+navbar.name=Blog
+navbar.about=About
+navbar.newrecord=New entry
+navbar.adminpanel=Adminpanel
+navbar.signin=Sign in
+navbar.signout=Sign out
+navbar.welcome=Welcome
+locale.changed=\u042F\u0437\u044B\u043A \u0438\u0437\u043C\u0435\u043D\u0451\u043D
+error.in.delete=Error in delete record area
+alert.record.deleted=Record deleted
+error.in.edit=You have no permission to edit this record
+alert.record.updated=Record updated
+alert.record.saved=Record saved
+alert.loggedin=You are logged in
+alert.wronglogin=Wrong login or password
+alert.loggedout=Now you logger out
+register.hint.empty.email=Email cannot be empty
+register.hint.empty.password=Password cannot be empty
+register.hint.empty.nickname=Nickname cannot be empty
+register.hint.wrong.nickname=Nickname must contain letters and digits only
+register.hint.empty.firstname=First name cannot be empty
+register.hint.wrong.firstname=First name must contain letters only
+register.hint.empty.lastname=Last name cannot be empty
+register.hint.wrong.lastname=Last name must contain letters only
+register.hint.taken.email=Email already registered
+register.hint.taken.nickname=Nickname already taken
+access.denied=You have no permission to access this area
