--- a/Web/src/main/resources/locale_ru_RU.properties
+++ b/Web/src/main/resources/locale_ru_RU.properties
@@ -1,36 +1,64 @@
 about.header=\u041E \u043F\u0440\u043E\u0435\u043A\u0442\u0435
-about.text=Some text about project
-about.title=About
-adminarea.header=Create property
-adminarea.title=Create property
-edit.form.maintext=Main text
-edit.form.category=Category
-edit.form.header=Header
-edit.form.reset=Reset
-edit.form.save=Save
-edit.form.tags=Tags
-edit.title=Create property
+about.text=\u041D\u0435\u0431\u043E\u043B\u044C\u0448\u043E\u0439 \u0442\u0435\u043A\u0441\u0442 \u043E \u043F\u0440\u0435\u043A\u0442\u0435
+about.title=\u041E \u043F\u0440\u043E\u0435\u043A\u0442\u0435
+adminarea.header=\u0410\u0434\u043C\u0438\u043D\u043A\u0430
+adminarea.title=\u0410\u0434\u043C\u0438\u043D\u043A\u0430
+edit.form.maintext=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0439 \u0442\u0435\u043A\u0441\u0442
+edit.form.category=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F
+edit.form.header=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+edit.form.reset=\u0421\u0431\u0440\u043E\u0441
+edit.form.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+edit.form.tags=\u0422\u044D\u0433\u0438 (\u0447\u0435\u0440\u0435\u0437 \u0437\u0430\u043F\u044F\u0442\u0443\u044E)
+edit.title=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0437\u0430\u043F\u0438\u0441\u0438
 footer.language=\u0412\u044B\u0431\u043E\u0440 \u044F\u0437\u044B\u043A\u0430
-error.title=Error
-error.header=Something went wrong
-error.text=Try to begin from <a href="index.jsp">main page</a> or return to <a href="javascript:history.back()">previous page</a> and try again.
-index.title=Main page
-index.record.edit=Edit
-index.record.delete=Delete
-index.record.category=Category
-index.record.author=Author
-index.newer=Newer
-index.older=Older
+error.title=\u041E\u0448\u0438\u0431\u043A\u0430
+error.header=\u0427\u0442\u043E-\u0442\u043E \u043F\u043E\u0448\u043B\u043E \u043D\u0435 \u0442\u0430\u043A
+error.text=\u041F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u043D\u0430\u0447\u0430\u0442\u044C \u0441 <a href="index.jsp">\u0433\u043B\u0430\u0432\u043D\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B</a> \u0438\u043B\u0438 \u0432\u0435\u0440\u043D\u0438\u0442\u0435\u0441\u044C \u043D\u0430 <a href="javascript:history.back()">\u043F\u0440\u0435\u0434\u044B\u0434\u0443\u0449\u0443\u044E</a> \u0438 \u043F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u0441\u043D\u043E\u0432\u0430.
+index.title=\u0413\u043B\u0430\u0432\u043D\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+index.record.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+index.record.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+index.record.category=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F
+index.record.author=\u0410\u0432\u0442\u043E\u0440
+index.newer=\u041D\u043E\u0432\u0435\u0435
+index.older=\u0421\u0442\u0430\u0440\u0435\u0435
 login.form.email=Email
-login.title=Login page
-login.form.password=Password
-login.form.submit=Sign in
-login.form.register=Sign up
-register.title=Register page
-register.form.nickname=Nickname
+login.title=\u0412\u0445\u043E\u0434 \u043D\u0430 \u0441\u0430\u0439\u0442
+login.form.password=\u041F\u0430\u0440\u043E\u043B\u044C
+login.form.submit=\u0412\u043E\u0439\u0442\u0438
+login.form.register=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+register.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+register.form.nickname=\u041D\u0438\u043A
 register.form.email=Email
-register.form.password=Password
-register.form.firstname=First name
-register.form.lastname=Last name
-register.form.submit=Sign up
-write.title=Create new entry
+register.form.password=\u041F\u0430\u0440\u043E\u043B\u044C
+register.form.firstname=\u0418\u043C\u044F
+register.form.lastname=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+register.form.submit=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C
+write.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0437\u0430\u043F\u0438\u0441\u0438
+navbar.toggle=\u041F\u0435\u0440\u0435\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0435 \u043D\u0430\u0432\u0438\u0433\u0430\u0446\u0438\u0438
+navbar.name=\u0411\u043B\u043E\u0433
+navbar.about=\u041E \u043F\u0440\u043E\u0435\u043A\u0442\u0435
+navbar.newrecord=\u041D\u043E\u0432\u0430\u044F \u0437\u0430\u043F\u0438\u0441\u044C
+navbar.adminpanel=\u0410\u0434\u043C\u0438\u043D\u043A\u0430
+navbar.signin=\u0412\u0445\u043E\u0434
+navbar.signout=\u0412\u044B\u0445\u043E\u0434
+navbar.welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C
+locale.changed=Language changed
+error.in.delete=\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u0438 \u0437\u0430\u043F\u0438\u0441\u0438
+alert.record.deleted=\u0417\u0430\u043F\u0438\u0441\u044C \u0443\u0434\u0430\u043B\u0435\u043D\u0430
+error.in.edit=\u041D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u044E \u0437\u0430\u043F\u0438\u0441\u0438
+alert.record.updated=\u0417\u0430\u043F\u0438\u0441\u044C \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0430
+alert.record.saved=\u0417\u0430\u043F\u0438\u0441\u044C \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0430
+alert.loggedin=\u0423\u0441\u043F\u0435\u0448\u043D\u044B\u0439 \u0432\u0445\u043E\u0434
+alert.wronglogin=\u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0435 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
+alert.loggedout=\u0412\u044B\u0445\u043E\u0434 \u0438\u0437 \u0441\u0438\u0441\u0442\u0435\u043C\u044B
+register.hint.empty.email=Email \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
+register.hint.empty.password=\u041F\u0430\u0440\u043E\u043B\u044C \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
+register.hint.empty.nickname=\u041D\u0435\u0438 \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
+register.hint.wrong.nickname=\u041D\u0438\u043A \u043C\u043E\u0436\u0435\u0442 \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u0442\u043E\u043B\u044C\u043A\u043E \u0431\u0443\u043A\u0432\u044B \u0438 \u0446\u0438\u0444\u0440\u044B
+register.hint.empty.firstname=\u0418\u043C\u044F \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u044B\u043C
+register.hint.wrong.firstname=\u0418\u043C\u044F \u043C\u043E\u0436\u0435\u0442 \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u0442\u043E\u043B\u044C\u043A\u043E \u0431\u0443\u043A\u0432\u044B
+register.hint.empty.lastname=\u0444\u0430\u043C\u0438\u043B\u0438\u044F \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0441\u0442\u043E\u0439
+register.hint.wrong.lastname=\u0424\u0430\u043C\u0438\u043B\u0438\u044F \u043C\u043E\u0436\u0435\u0442 \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u0442\u043E\u043B\u044C\u043A\u043E \u0431\u0443\u043A\u0432\u044B
+register.hint.taken.email=Email \u0443\u0436\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D
+register.hint.taken.nickname=\u041D\u0438\u043A \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442
+access.denied=\u0423 \u0432\u0430\u0441 \u043D\u0435\u0442 \u043F\u0440\u0430\u0432 \u0434\u043B\u044F \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u044D\u0442\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435
