Change pagination Add some javadock

--- a/Web/src/main/resources/locale_en_US.properties
+++ b/Web/src/main/resources/locale_en_US.properties
@@ -62,3 +62,4 @@ register.hint.wrong.lastname=Last name must contain letters only
 register.hint.taken.email=Email already registered
 register.hint.taken.nickname=Nickname already taken
 access.denied=You have no permission to access this area
+index.records.per.page=Records per page
