Massive changes is actions Second-level cache realisation added

--- a/Web/src/main/resources/locale_en_US.properties
+++ b/Web/src/main/resources/locale_en_US.properties
@@ -1,3 +1,4 @@
+category.form.name=Name
 about.header=About project
 about.text=Some text about project
 about.title=About
@@ -63,3 +64,9 @@ register.hint.taken.email=Email already registered
 register.hint.taken.nickname=Nickname already taken
 access.denied=You have no permission to access this area
 index.records.per.page=Records per page
+category.title=Category
+category.header.new=New category
+category.header.edit=Edit category
+category.form.parent=Parent category
+category.form.toplevel=This is top-level category
+category.form.submit=Submit
