Add more l10n Divide controllers by functions

--- a/Web/src/main/webapp/WEB-INF/locales/messages_en.properties
+++ b/Web/src/main/webapp/WEB-INF/locales/messages_en.properties
@@ -1,3 +1,15 @@
+error.header=Something went wrong!
+error.text=Try to begin from <a href="${pageContext.request.contextPath}/">main page</a> or return to <a href="javascript:history.back()">previous page</a> and try again.
+footer.changelang=Select language
+login.form.button.signin=Sign in
+login.form.button.signon=Sign on
+login.form.label.email=E-mail
+login.form.label.password=Password
+main.box.name.calendar=Calendar
+main.box.name.categories=Categories
+main.box.name.tags=Popular tags
+main.label.author=Author
+main.label.category=Category
 navbar.about=About
 navbar.adminpanel=Adminpanel
 navbar.newrecord=New record
@@ -5,3 +17,9 @@ navbar.signin=Sign in
 navbar.signout=Sign out
 navbar.sitename=Blog
 navbar.toggle=Toggle navigation
+register.form.button.signon=Sign on
+register.form.label.email=E-mail
+register.form.label.firstname=First name
+register.form.label.lastname=Last name
+register.form.label.nickname=Nickname
+register.form.label.password=Password
