--- a/Web/src/main/webapp/WEB-INF/locales/messages_ru.properties
+++ b/Web/src/main/webapp/WEB-INF/locales/messages_ru.properties
@@ -1,3 +1,15 @@
+error.header=\u0427\u0442\u043E-\u0442\u043E \u043F\u043E\u0448\u043B\u043E \u043D\u0435 \u0442\u0430\u043A!
+error.text=\u041F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u043D\u0430\u0447\u0430\u0442\u044C \u0441 <a href="${pageContext.request.contextPath}/">\u0433\u043B\u0430\u0432\u043D\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B</a> \u0438\u043B\u0438 \u0432\u0435\u0440\u043D\u0438\u0442\u0435\u0441\u044C \u043D\u0430 <a href="javascript:history.back()">\u043F\u0440\u0435\u0434\u044B\u0434\u0443\u0449\u0443\u044E</a> \u0438 \u043F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u0441\u043D\u043E\u0432\u0430.
+footer.changelang=\u0412\u044B\u0431\u043E\u0440 \u044F\u0437\u044B\u043A\u0430
+login.form.button.signin=\u0412\u043E\u0439\u0442\u0438
+login.form.button.signon=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+login.form.label.email=\u042D\u043B. \u043F\u043E\u0447\u0442\u0430
+login.form.label.password=\u041F\u0430\u0440\u043E\u043B\u044C
+main.box.name.calendar=\u041A\u0430\u043B\u0435\u043D\u0434\u0430\u0440\u044C
+main.box.name.categories=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438
+main.box.name.tags=\u041F\u043E\u043F\u0443\u043B\u044F\u0440\u043D\u044B\u0435 \u0442\u044D\u0433\u0438
+main.label.author=\u0410\u0432\u0442\u043E\u0440
+main.label.category=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F
 navbar.about=\u041E \u043F\u0440\u043E\u0435\u043A\u0442\u0435
 navbar.adminpanel=\u041F\u0430\u043D\u0435\u043B\u044C \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440\u0430
 navbar.newrecord=\u041D\u043E\u0432\u0430\u044F \u0437\u0430\u043F\u0438\u0441\u044C
@@ -5,3 +17,9 @@ navbar.signin=\u0412\u0445\u043E\u0434
 navbar.signout=\u0412\u044B\u0445\u043E\u0434
 navbar.sitename=\u0411\u043B\u043E\u0433
 navbar.toggle=\u041F\u0435\u0440\u0435\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0435 \u043D\u0430\u0432\u0438\u0433\u0430\u0446\u0438\u0438
+register.form.button.signon=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+register.form.label.email=\u042D\u043B. \u043F\u043E\u0447\u0442\u0430
+register.form.label.firstname=\u0418\u043C\u044F
+register.form.label.lastname=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+register.form.label.nickname=\u041D\u0438\u043A
+register.form.label.password=\u041F\u0430\u0440\u043E\u043B\u044C
