Complete l10n (for now) Make shine

--- a/Web/src/main/webapp/WEB-INF/locales/messages_en.properties
+++ b/Web/src/main/webapp/WEB-INF/locales/messages_en.properties
@@ -1,3 +1,7 @@
+alert.login.denied=Incorrect login/password
+alert.login.success=Success sign in
+alert.register.denied=Email or Nickname already registered
+alert.register.success=Success sign on
 error.header=Something went wrong!
 error.text=Try to begin from <a href="${pageContext.request.contextPath}/">main page</a> or return to <a href="javascript:history.back()">previous page</a> and try again.
 footer.changelang=Select language
