Add edit/delete buttons to records on main page

--- a/Web/src/main/webapp/WEB-INF/locales/messages_en.properties
+++ b/Web/src/main/webapp/WEB-INF/locales/messages_en.properties
@@ -12,6 +12,8 @@ login.form.label.password=Password
 main.box.name.calendar=Calendar
 main.box.name.categories=Categories
 main.box.name.tags=Popular tags
+main.button.delete=DELETE
+main.button.edit=EDIT
 main.label.author=Author
 main.label.category=Category
 navbar.about=About
