--- a/Web/src/main/webapp/WEB-INF/locales/messages_ru.properties
+++ b/Web/src/main/webapp/WEB-INF/locales/messages_ru.properties
@@ -12,6 +12,8 @@ login.form.label.password=\u041F\u0430\u0440\u043E\u043B\u044C
 main.box.name.calendar=\u041A\u0430\u043B\u0435\u043D\u0434\u0430\u0440\u044C
 main.box.name.categories=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438
 main.box.name.tags=\u041F\u043E\u043F\u0443\u043B\u044F\u0440\u043D\u044B\u0435 \u0442\u044D\u0433\u0438
+main.button.delete=\u0423\u0414\u0410\u041B\u0418\u0422\u042C
+main.button.edit=\u0420\u0415\u0414\u0410\u041A\u0422\u0418\u0420\u041E\u0412\u0410\u0422\u042C
 main.label.author=\u0410\u0432\u0442\u043E\u0440
 main.label.category=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F
 navbar.about=\u041E \u043F\u0440\u043E\u0435\u043A\u0442\u0435
