Try to add spring security (failed for now)

--- a/Web/src/main/resources/messages_en.properties
+++ b/Web/src/main/resources/messages_en.properties
@@ -1,5 +1,6 @@
 alert.login.denied=Incorrect login/password
 alert.login.success=Success sign in
+alert.logout=You now singrd out
 alert.register.denied=Email or Nickname already registered
 alert.register.success=Success sign on
 error.header=Something went wrong!
