Try to add spring security (now it's work)

--- a/Web/src/main/resources/messages_en.properties
+++ b/Web/src/main/resources/messages_en.properties
@@ -1,6 +1,6 @@
 alert.login.denied=Incorrect login/password
 alert.login.success=Success sign in
-alert.logout=You now singrd out
+alert.logout=You now singed out
 alert.register.denied=Email or Nickname already registered
 alert.register.success=Success sign on
 error.header=Something went wrong!
@@ -9,6 +9,7 @@ footer.changelang=Select language
 login.form.button.signin=Sign in
 login.form.button.signon=Sign on
 login.form.label.email=E-mail
+login.form.label.memory=Remember me
 login.form.label.password=Password
 main.box.name.calendar=Calendar
 main.box.name.categories=Categories
