--- a/Web/src/main/resources/messages_ru.properties
+++ b/Web/src/main/resources/messages_ru.properties
@@ -9,6 +9,7 @@ footer.changelang=\u0412\u044B\u0431\u043E\u0440 \u044F\u0437\u044B\u043A\u0430
 login.form.button.signin=\u0412\u043E\u0439\u0442\u0438
 login.form.button.signon=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 login.form.label.email=\u042D\u043B. \u043F\u043E\u0447\u0442\u0430
+login.form.label.memory=\u0417\u0430\u043F\u043E\u043C\u043D\u0438\u0442\u044C
 login.form.label.password=\u041F\u0430\u0440\u043E\u043B\u044C
 main.box.name.calendar=\u041A\u0430\u043B\u0435\u043D\u0434\u0430\u0440\u044C
 main.box.name.categories=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438
