--- a/Web/src/main/resources/messages_en.properties
+++ b/Web/src/main/resources/messages_en.properties
@@ -3,8 +3,13 @@ alert.login.success=Success sign in
 alert.logout=You now singed out
 alert.register.denied=Email or Nickname already registered
 alert.register.success=Success sign on
+category.form.button.submit=Submit
+category.form.label.category=Category
+category.form.label.name=Name
+denied.header=403 - Access Denied
+denied.text=You have no permission to access this area.
 error.header=Something went wrong!
-error.text=Try to begin from <a href="${pageContext.request.contextPath}/">main page</a> or return to <a href="javascript:history.back()">previous page</a> and try again.
+error.text=Try to begin from <a href="/Blog/">main page</a> or return to <a href="javascript:history.back()">previous page</a> and try again.
 footer.changelang=Select language
 login.form.button.signin=Sign in
 login.form.button.signon=Sign on
@@ -31,3 +36,4 @@ register.form.label.firstname=First name
 register.form.label.lastname=Last name
 register.form.label.nickname=Nickname
 register.form.label.password=Password
+register.form.label.role=Role
