--- a/Web/src/main/resources/messages_en.properties
+++ b/Web/src/main/resources/messages_en.properties
@@ -10,6 +10,8 @@ denied.header=403 - Access Denied
 denied.text=You have no permission to access this area.
 error.header=Something went wrong!
 error.text=Try to begin from <a href="/Blog/">main page</a> or return to <a href="javascript:history.back()">previous page</a> and try again.
+errors.401=Http Error Code: 401. Unauthorized
+errors.400=Http Error Code: 400. Bad Request
 footer.changelang=Select language
 login.form.button.signin=Sign in
 login.form.button.signon=Sign on
@@ -37,3 +39,6 @@ register.form.label.lastname=Last name
 register.form.label.nickname=Nickname
 register.form.label.password=Password
 register.form.label.role=Role
+errors.403=Http Error Code: 403. Access denied
+errors.404=Http Error Code: 404. Resource not found
+errors.500=Http Error Code: 500. Internal Server Error
