--- a/Web/src/main/resources/messages_en.properties
+++ b/Web/src/main/resources/messages_en.properties
@@ -42,3 +42,14 @@ register.form.label.role=Role
 errors.403=Http Error Code: 403. Access denied
 errors.404=Http Error Code: 404. Resource not found
 errors.500=Http Error Code: 500. Internal Server Error
+record.form.label.header=Record header
+record.form.label.category=Category
+record.form.label.body=Record body
+record.form.label.tags=Tags
+record.form.button.submit=Submit
+admin.form.label.id=Id
+admin.form.label.name=Name
+admin.form.label.nickname=Nickname
+admin.form.label.fullname=Full name
+admin.link.addcategory=Add new Category
+admin.link.adduser=Add new User
