--- a/Web/src/main/resources/messages_en.properties
+++ b/Web/src/main/resources/messages_en.properties
@@ -53,3 +53,10 @@ admin.form.label.nickname=Nickname
 admin.form.label.fullname=Full name
 admin.link.addcategory=Add new Category
 admin.link.adduser=Add new User
+main.box.link.allcategories=All Categories
+main.heder.userscope=All posts by user
+main.heder.cancel=Cancel
+main.heder.categoryscope=Posts in category
+main.heder.tagscope=Posts by tag
+main.pagination.newer=Newer
+main.pagination.older=Older
