--- a/Web/src/main/resources/messages_ru.properties
+++ b/Web/src/main/resources/messages_ru.properties
@@ -53,3 +53,10 @@ admin.form.label.nickname=\u041D\u0438\u043A
 admin.form.label.fullname=\u041F\u043E\u043B\u043D\u043E\u0435 \u0438\u043C\u044F
 admin.link.addcategory=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u0443\u044E \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044E
 admin.link.adduser=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0433\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+main.box.link.allcategories=\u0412\u0441\u0435 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438
+main.heder.userscope=\u0412\u0441\u0435 \u043F\u043E\u0441\u0442\u044B \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+main.heder.cancel=\u0421\u0431\u0440\u043E\u0441\u0438\u0442\u044C
+main.heder.categoryscope=\u041F\u043E\u0441\u0442\u044B \u0432 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438
+main.heder.tagscope=\u041F\u043E\u0441\u0442\u044B \u0441 \u0442\u0435\u0433\u043E\u043C
+main.pagination.newer=\u041D\u043E\u0432\u0435\u0435
+main.pagination.older=\u0420\u0430\u043D\u044C\u0448\u0435
