Almost done, but registration is broken

--- a/Web/src/main/resources/messages_en.properties
+++ b/Web/src/main/resources/messages_en.properties
@@ -32,7 +32,7 @@ navbar.signin=Sign in
 navbar.signout=Sign out
 navbar.sitename=Blog
 navbar.toggle=Toggle navigation
-register.form.button.signon=Sign on
+register.form.button.signon=Submit
 register.form.label.email=E-mail
 register.form.label.firstname=First name
 register.form.label.lastname=Last name
