--- a/Web/src/main/resources/messages_ru.properties
+++ b/Web/src/main/resources/messages_ru.properties
@@ -32,7 +32,7 @@ navbar.signin=\u0412\u0445\u043E\u0434
 navbar.signout=\u0412\u044B\u0445\u043E\u0434
 navbar.sitename=\u0411\u043B\u043E\u0433
 navbar.toggle=\u041F\u0435\u0440\u0435\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0435 \u043D\u0430\u0432\u0438\u0433\u0430\u0446\u0438\u0438
-register.form.button.signon=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+register.form.button.signon=\u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
 register.form.label.email=\u042D\u043B. \u043F\u043E\u0447\u0442\u0430
 register.form.label.firstname=\u0418\u043C\u044F
 register.form.label.lastname=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
