--- a/Web/src/main/resources/messages_en.properties
+++ b/Web/src/main/resources/messages_en.properties
@@ -60,3 +60,7 @@ main.heder.categoryscope=Posts in category
 main.heder.tagscope=Posts by tag
 main.pagination.newer=Newer
 main.pagination.older=Older
+main.modal.deleterecord.title=Are you sure?
+main.modal.deleterecord.text=If you press YES record will be deleted permanently!
+main.modal.deleterecord.button.cancel=Cancel
+main.modal.deleterecord.button.confirm=YES
