--- a/Web/src/main/resources/messages_ru.properties
+++ b/Web/src/main/resources/messages_ru.properties
@@ -60,3 +60,7 @@ main.heder.categoryscope=\u041F\u043E\u0441\u0442\u044B \u0432 \u043A\u0430\u044
 main.heder.tagscope=\u041F\u043E\u0441\u0442\u044B \u0441 \u0442\u0435\u0433\u043E\u043C
 main.pagination.newer=\u041D\u043E\u0432\u0435\u0435
 main.pagination.older=\u0420\u0430\u043D\u044C\u0448\u0435
+main.modal.deleterecord.title=\u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B?
+main.modal.deleterecord.text=\u041F\u0440\u0438 \u043D\u0430\u0436\u0430\u0442\u0438\u0438 \u043A\u043D\u043E\u043F\u043A\u0438 \u0414\u0410 \u0437\u0430\u043F\u0438\u0441\u044C \u0431\u0443\u0434\u0435\u0442 \u0443\u0434\u0430\u043B\u0435\u043D\u0430 \u0431\u0435\u0437 \u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E\u0441\u0442\u0438 \u0432\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u044F!
+main.modal.deleterecord.button.cancel=\u041E\u0442\u043C\u0435\u043D\u0430
+main.modal.deleterecord.button.confirm=\u0414\u0410
